fix(template): :bug: while value too long, do not show good

--- a/src/view-modal/style/index.less
+++ b/src/view-modal/style/index.less
@@ -26,5 +26,6 @@
   &-col-value {
     margin-left: 10px;
     flex: 1;
+    width: 0;
   }
 }
